--- a/assets/sass/layout/_index.scss
+++ b/assets/sass/layout/_index.scss
@@ -17,9 +17,10 @@
 @import 'navigation';
 @import 'main_nav';
 @import 'main_hero';
+@import 'main_profile';
+@import 'main_videos';
 @import 'grid';
 @import 'header';
 @import 'footer';
-@import 'main';
 @import 'sidebar';
 @import 'forms';
