--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ body {
   padding: 0;
 }
 
+img {
+  max-width: 100%;
+}
+
 /*
  *
  * En sitios/aplicaciones grandes es usual tener distintos temas o 
@@ -101,21 +105,36 @@ body {
 .main_nav__container {
   display: flex;
   justify-content: space-between;
-  padding-top: 2em;
-  padding-right: 2em;
-  padding-left: 2em;
+  padding: 2rem 7rem;
+}
+.main_nav__icons {
+  align-self: center;
+}
+
+.logo {
+  flex: 1;
 }
 
 .nav ul li {
   display: inline-block;
-  padding: 0 2em;
+  padding: 0 1em;
   font-family: monospace;
   font-weight: bold;
 }
 
-.main_hero {
-  display: flex;
-  justify-content: space-between;
+.toggler {
+  align-self: center;
+  margin-bottom: 0.6rem;
+  margin-left: 1rem;
+}
+
+@media all and (max-width: 576px) {
+  .main_nav__icons {
+    display: none;
+  }
+  .main_nav__container {
+    padding: 2rem;
+  }
 }
 .main_hero__container {
   background-image: url("../images/image-banner.png");
@@ -124,11 +143,99 @@ body {
   background-position: center;
   padding-bottom: 15rem;
 }
-.main_hero__image {
+
+.profile__container {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 7rem;
+}
+.profile__image {
   background-image: url("../images/profile-image.png");
-  border: 50%;
-  width: 150;
-  height: 150;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+}
+.profile__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+.profile__followers {
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  color: gray;
+}
+
+.desc {
+  flex: 1;
+  align-self: center;
+  margin-left: 2rem;
+}
+
+.btns {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  align-self: center;
+}
+.btns__btn--primary {
+  display: inline-block;
+  padding: 0.5rem;
+  background-color: #92dce5;
+}
+.btns__btn--secondary {
+  margin-left: 0.5rem;
+  display: inline-block;
+  padding: 0.5rem;
+  background-color: #ef6461;
+}
+
+.separator {
+  border: 0.1px solid silver;
+}
+
+@media all and (max-width: 576px) {
+  .btns {
+    display: none;
+  }
+
+  .profile__container {
+    padding: 2rem;
+  }
+}
+.main_videos__container {
+  display: flex;
+  justify-content: center;
+  padding: 2rem 5rem;
+  flex-wrap: wrap;
+}
+.main_videos__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  margin-bottom: 2rem;
+}
+.main_videos__thumb {
+  width: 250px;
+  height: 150px;
+  background-size: cover;
+  background-position: center;
+}
+.main_videos__subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+}
+.main_videos__views {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: gray;
+}
+
+.item {
+  align-self: end;
+  margin: 2rem;
 }
 
 /*
